# deep-learning-noise-cancellation

./: CMakeLists.txt  README.md
model/: a.c  a.h  b.c  dump_rnn.py  k2t.py  keras_code.py  keras_model.py  keras_set_weights.py  kerastopb.py  rnn_noise.h5  rnn_noise.h5.pb  rnn_noise_new.h5  rnn_noise_new.h5.pb  weights.py
src/: WavUtils.cpp  WavUtils.h  kiss_fft.cpp  kiss_fft.h  main.cpp  main.h  rnn.cpp  rnn.h  rnnoise.cpp  rnnoise.h
